--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <title>Tabela Financeira (Tabulator)</title>
   <link href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator.min.css" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; margin: 30px; }
+    body { font-family: Arial, sans-serif; margin: 30px; background: #faf9f6; }
     #tabela { margin-top: 20px; }
+    .tabulator .tabulator-group {
+      background: #e3e6ed;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -15,7 +19,7 @@
 
   <script src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"></script>
   <script>
-    // Função que calcula largura ótima para uma string
+    // Função para calcular largura ideal de texto
     function calcTextWidth(text, font = "14px Arial") {
       const canvas = document.createElement("canvas");
       const ctx = canvas.getContext("2d");
@@ -23,17 +27,13 @@
       return ctx.measureText(text).width;
     }
 
-    // Função para gerar colunas com largura dinâmica nas datas
+    // Gera colunas dinamicamente e ajusta largura das datas
     function gerarColunasDinamicas(dados) {
       if (!dados || !Array.isArray(dados) || dados.length === 0) return [];
-
       const font = "14px Arial";
       return Object.keys(dados[0]).map(key => {
-        if (key === "expandCol") {
-          return { title: "+", field: key, width: 40, hozAlign: "center", headerSort: false };
-        }
         if (key.match(/^\d{2}\/\d{2}/)) {
-          // Pega o maior texto da coluna (inclusive o header)
+          // Datas: largura baseada no maior valor da coluna
           let maxWidth = calcTextWidth(key, font);
           dados.forEach(row => {
             if (row[key]) {
@@ -41,23 +41,22 @@
               if (w > maxWidth) maxWidth = w;
             }
           });
-          // Padding extra
           maxWidth = Math.ceil(maxWidth + 20);
-          // Limite mínimo e máximo de largura
           maxWidth = Math.max(65, Math.min(maxWidth, 130));
           return { title: key, field: key, width: maxWidth, hozAlign: "center" };
         }
+        // Colunas principais: largura padrão ou menor para códigos
+        if (["Fornecedor/Cliente"].includes(key)) return { title: key, field: key, width: 110 };
         return { title: key, field: key, width: 150 };
       });
     }
 
-    // Função para desenhar a tabela
+    // Função principal de renderização
     function drawTable(dados) {
       if (!dados || !Array.isArray(dados) || dados.length === 0) return;
 
       const columns = gerarColunasDinamicas(dados);
 
-      // Destroi tabela antiga se houver
       if (window.table) {
         window.table.setData([]); // Limpa dados
         window.table.destroy();
@@ -71,6 +70,11 @@
         resizableRows: false,
         height: "auto",
         placeholder: "Nenhum dado encontrado.",
+        groupBy: "Classificação",
+        groupStartOpen: true, // grupos abertos por padrão
+        groupHeader: function(value, count, data) {
+          return value ? value + " (" + count + ")" : "Sem Classificação";
+        },
         langs: {
           "pt-br": {
             "columns": {},
@@ -81,13 +85,14 @@
       window.table.setLocale("pt-br");
     }
 
-    // Inicializa com dados vazios (opcional)
+    // Inicia vazio
     drawTable([]);
 
-    // Recebe dados via postMessage (do Appsmith)
+    // Espera dados dinâmicos do Appsmith via postMessage
     window.addEventListener("message", function(event) {
       try {
         let data = typeof event.data === "string" ? JSON.parse(event.data) : event.data;
+        // Espera array de objetos
         if (Array.isArray(data)) {
           drawTable(data);
         }
