--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <h2>Tabela Detalhamento (Tabulator)</h2>
+  <h2>Tabela Detalhamento</h2>
   <div id="tabela"></div>
 
   <script src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"></script>
@@ -52,20 +52,14 @@
       });
     }
 
-    // Função que retorna um objeto "linha de totais" (sem label, só valores)
     function calcularLinhaTotais(dados) {
       if (!dados || !Array.isArray(dados) || dados.length === 0) return {};
       const primeira = dados[0];
       const keys = Object.keys(primeira);
-
-      // Detecta colunas datas (ex: "24/06", "25/06") e "VENCIDO"
       const colDatas = keys.filter(k => /^\d{2}\/\d{2}/.test(k));
       const colVencido = keys.find(k => k.toUpperCase().includes("VENCIDO"));
-
       const total = {};
       keys.forEach(k => total[k] = "");
-
-      // Somatórios só nas colunas de interesse
       if (colVencido) {
         total[colVencido] = dados.reduce((acc, row) => acc + parseFloat(
           (row[colVencido] || "0").toString().replace(/[^\d,.\-]/g, "").replace(",", ".")), 0);
@@ -74,37 +68,26 @@
         total[c] = dados.reduce((acc, row) => acc + parseFloat(
           (row[c] || "0").toString().replace(/[^\d,.\-]/g, "").replace(",", ".")), 0);
       });
-
-      // Formata como moeda/decimal se necessário (exemplo: 2 casas)
       if (colVencido && !isNaN(total[colVencido])) {
         total[colVencido] = total[colVencido] === 0 ? "" : total[colVencido].toLocaleString('pt-BR', { style: 'currency', currency: 'BRL', minimumFractionDigits: 2 });
       }
       colDatas.forEach(c => {
         if (!isNaN(total[c])) total[c] = total[c] === 0 ? "" : total[c].toLocaleString('pt-BR', { style: 'currency', currency: 'BRL', minimumFractionDigits: 2 });
       });
-
-      // Opcional: pode setar um campo especial pra identificar a linha (ajuda no rowFormatter)
       total["__isTotal"] = true;
-
       return total;
     }
 
     function drawTable(dadosOriginais) {
       if (!dadosOriginais || !Array.isArray(dadosOriginais) || dadosOriginais.length === 0) return;
-
-      // Cópia do array, não altera original
       let dados = JSON.parse(JSON.stringify(dadosOriginais));
-      // Calcula totais
       const linhaTotais = calcularLinhaTotais(dados);
-      dados.unshift(linhaTotais); // insere totals no topo
-
+      dados.unshift(linhaTotais);
       const columns = gerarColunasDinamicas(dados);
-
       if (window.table) {
-        window.table.setData([]); // Limpa dados
+        window.table.setData([]);
         window.table.destroy();
       }
-
       window.table = new Tabulator("#tabela", {
         data: dados,
         columns: columns,
@@ -125,7 +108,6 @@
           }
         },
         rowFormatter: function(row) {
-          // Destaca a linha de totais
           const data = row.getData();
           if (data["__isTotal"]) {
             row.getElement().classList.add("linha-totais");
