--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <script src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"></script>
   <script>
+    // Função para calcular largura ideal de texto
     function calcTextWidth(text, font = "14px Arial") {
       const canvas = document.createElement("canvas");
       const ctx = canvas.getContext("2d");
@@ -31,6 +32,7 @@
       return ctx.measureText(text).width;
     }
 
+    // Gera colunas dinamicamente e ajusta largura das datas
     function gerarColunasDinamicas(dados) {
       if (!dados || !Array.isArray(dados) || dados.length === 0) return [];
       const font = "14px Arial";
@@ -52,14 +54,20 @@
       });
     }
 
+    // Gera linha de totais (primeira linha), sem label, só valores
     function calcularLinhaTotais(dados) {
       if (!dados || !Array.isArray(dados) || dados.length === 0) return {};
       const primeira = dados[0];
       const keys = Object.keys(primeira);
+
+      // Detecta colunas de datas e "VENCIDO"
       const colDatas = keys.filter(k => /^\d{2}\/\d{2}/.test(k));
       const colVencido = keys.find(k => k.toUpperCase().includes("VENCIDO"));
+
       const total = {};
       keys.forEach(k => total[k] = "");
+
+      // Somatórios só nas colunas de interesse
       if (colVencido) {
         total[colVencido] = dados.reduce((acc, row) => acc + parseFloat(
           (row[colVencido] || "0").toString().replace(/[^\d,.\-]/g, "").replace(",", ".")), 0);
@@ -68,26 +76,43 @@
         total[c] = dados.reduce((acc, row) => acc + parseFloat(
           (row[c] || "0").toString().replace(/[^\d,.\-]/g, "").replace(",", ".")), 0);
       });
+
+      // Formata como moeda/decimal se necessário (2 casas)
       if (colVencido && !isNaN(total[colVencido])) {
         total[colVencido] = total[colVencido] === 0 ? "" : total[colVencido].toLocaleString('pt-BR', { style: 'currency', currency: 'BRL', minimumFractionDigits: 2 });
       }
       colDatas.forEach(c => {
         if (!isNaN(total[c])) total[c] = total[c] === 0 ? "" : total[c].toLocaleString('pt-BR', { style: 'currency', currency: 'BRL', minimumFractionDigits: 2 });
       });
+
+      // Linha especial para destacar (ajuda no rowFormatter)
       total["__isTotal"] = true;
+      // Não coloca nada em "Classificação" — evita grupo!
       return total;
     }
 
+    // Função principal de renderização
     function drawTable(dadosOriginais) {
       if (!dadosOriginais || !Array.isArray(dadosOriginais) || dadosOriginais.length === 0) return;
-      let dados = JSON.parse(JSON.stringify(dadosOriginais));
+
+      // Remove linhas sem "Classificação" (sujeira)
+      let dados = dadosOriginais.filter(row =>
+        row["Classificação"] !== undefined &&
+        row["Classificação"] !== null &&
+        row["Classificação"].toString().trim() !== ""
+      ).map(row => ({ ...row })); // Clone para evitar bugs
+
+      // Calcula linha de totais (primeira linha)
       const linhaTotais = calcularLinhaTotais(dados);
       dados.unshift(linhaTotais);
+
       const columns = gerarColunasDinamicas(dados);
+
       if (window.table) {
         window.table.setData([]);
         window.table.destroy();
       }
+
       window.table = new Tabulator("#tabela", {
         data: dados,
         columns: columns,
@@ -99,7 +124,7 @@
         groupBy: "Classificação",
         groupStartOpen: true,
         groupHeader: function(value, count, data) {
-          return value ? value + " (" + count + ")" : "Sem Classificação";
+          return value ? value + " (" + count + ")" : ""; // Remove "Sem Classificação"
         },
         langs: {
           "pt-br": {
@@ -108,6 +133,7 @@
           }
         },
         rowFormatter: function(row) {
+          // Destaca a linha de totais
           const data = row.getData();
           if (data["__isTotal"]) {
             row.getElement().classList.add("linha-totais");
@@ -124,7 +150,6 @@
     window.addEventListener("message", function(event) {
       try {
         let data = typeof event.data === "string" ? JSON.parse(event.data) : event.data;
-        console.log("Recebido via postMessage:", data); // <-- aqui!
         if (Array.isArray(data)) {
           drawTable(data);
         }
